--- a/Admin/src/app/app.component.html
+++ b/Admin/src/app/app.component.html
@@ -3,7 +3,28 @@
 <div class="container main-container">
   <div class="row">
         <div class="col-md-4">
-            <h3>Marcador</h3>
+            <div *ngIf="marcadorSel">
+              <h3>Marcador</h3>
+              <hr>
+              <div class="form-group">
+                <label >Titulo </label>
+                <input [(ngModel)]="marcadorSel.titulo"
+                        type="text"
+                        name="titulo"
+                        class="form-group">
+              </div>
+              <div class="form-group">
+                <label >Titulo </label>
+                <textarea [(ngModel)]="marcadorSel.titulo"
+                        type="text"
+                        name="titulo"
+                        class="form-control"
+                        rows="5">
+                </textarea>
+              </div>
+              <button type="button" class="btn btn-outline-primary btn-block"
+                (click)="_ms.guardarMarcadores()">Guardar Cambios</button>
+            </div>
         </div>
         <div class="col-md-8">
           <sebm-google-map 
@@ -11,12 +32,19 @@
               [longitude]="lng"
               [zoom]="zoom"
               (mapClick)="clickMapa($event)">
-            <sebm-google-map-marker 
-                [latitude]="lat" 
-                [longitude]="lng">
+            <sebm-google-map-marker *ngFor="let marcador of mapaService.marcadores;let i = index"
+                [latitude]="marcador.lat" 
+                [longitude]="marcador.lng"
+                [title]="marcador.titulo"
+                [markerDraggable]="marcador.draggable"
+                (markerClick)="clickMarcador(marcador,i)"
+                (dragEnd)="dragEndMarcador(marcador,$event)"
+                >
                 <sebm-google-map-info-window>
-                  <strong>Titulo</strong>
-                  <p>punto incial</p>
+                  <strong>{{marcador.titulo}}</strong>
+                  <p *ngIf="marcador.desc">
+                    {{marcador.desc}}
+                  </p>
                 </sebm-google-map-info-window>
             </sebm-google-map-marker>
           </sebm-google-map>
